<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name"><b>Περί Βουλής</b></string>
    <string name="ipiresia"><b>Υπηρεσία - Φορέας: </b></string>
    <string name="sinfo"><b>Τελικός Υπογράφων: </b></string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="firebase_status_fmt">%s</string>
    <string name="google_status_fmt">Καλώς ήρθες, %s!</string>
    <string name="signed_out">Signed Out</string>
    <string name="loading">Loading…</string>
    <string name="nav_home">Αρχική</string>
    <string name="perifereia"><b>Επιλέγω την Περιφέρεια:</b></string>
    <string name="epikrateias">ΕΠΙΚΡΑΤΕΙΑΣ</string>
    <string name="athinon">Α\' ΑΘΗΝΩΝ</string>
    <string name="bathinon">Β\' ΑΘΗΝΩΝ</string>
    <string name="aiotolias">ΑΙΤΩΛΙΑΣ ΚΑΙ AΚΑΡΝΑΝΙΑΣ</string>
    <string name="argolidas">ΑΡΓΟΛΙΔΟΣ</string>
    <string name="arkadias">ΑΡΚΑΔΙΑΣ</string>
    <string name="artis">ΑΡΤΗΣ</string>
    <string name="attikis">ΑΤΤΙΚΗΣ</string>
    <string name="axaias">ΑΧΑΪΑΣ</string>
    <string name="voiotias">ΒΟΙΩΤΙΑΣ</string>
    <string name="grevenon">ΓΡΕΒΕΝΩΝ</string>
    <string name="dramas">ΔΡΑΜΑΣ</string>
    <string name="dodekanisa">ΔΩΔΕΚΑΝΗΣΟΥ</string>
    <string name="evrou">ΕΒΡΟΥ</string>
    <string name="evias">ΕΥΒΟΙΑΣ</string>
    <string name="evritanias">ΕΥΡΥΤΑΝΙΑΣ</string>
    <string name="zakinthos">ΖΑΚΥΝΘΟΥ</string>
    <string name="ilias">ΗΛΕΙΑΣ</string>
    <string name="imathias">ΗΜΑΘΙΑΣ</string>
    <string name="irakliou">ΗΡΑΚΛΕΙΟΥ</string>
    <string name="thesprotias">ΘΕΣΠΡΩΤΙΑΣ</string>
    <string name="thess">Α\' ΘΕΣΣΑΛΟΝΙΚΗΣ</string>
    <string name="bthess">Β\' ΘΕΣΣΑΛΟΝΙΚΗΣ</string>
    <string name="ioannina">ΙΩΑΝΝΙΝΩΝ</string>
    <string name="kavalas">ΚΑΒΑΛΑΣ</string>
    <string name="karditsas">ΚΑΡΔΙΤΣΗΣ</string>
    <string name="kastorias">ΚΑΣΤΟΡΙΑΣ</string>
    <string name="kerkiras">ΚΕΡΚΥΡΑΣ</string>
    <string name="kefallinias">ΚΕΦΑΛΛΗΝΙΑΣ</string>
    <string name="kilkis">ΚΙΛΚΙΣ</string>
    <string name="kozanis">ΚΟΖΑΝΗΣ</string>
    <string name="korinthias">ΚΟΡΙΝΘΙΑΣ</string>
    <string name="kikladon">ΚΥΚΛΑΔΩΝ</string>
    <string name="lakonias">ΛΑΚΩΝΙΑΣ</string>
    <string name="larisas">ΛΑΡΙΣΗΣ</string>
    <string name="lasithi">ΛΑΣΙΘΙΟΥ</string>
    <string name="lesvou">ΛΕΣΒΟΥ</string>
    <string name="leukados">ΛΕΥΚΑΔΟΣ</string>
    <string name="magnisias">ΜΑΓΝΗΣΙΑΣ</string>
    <string name="messinias">ΜΕΣΣΗΝΙΑΣ</string>
    <string name="ksanthis">ΞΑΝΘΗΣ</string>
    <string name="piraias">Α\' ΠΕΙΡΑΙΩΣ</string>
    <string name="bpirea">Β\' ΠΕΙΡΑΙΩΣ</string>
    <string name="pellas">ΠΕΛΛΗΣ</string>
    <string name="pierias">ΠΙΕΡΙΑΣ</string>
    <string name="prevezis">ΠΡΕΒΕΖΗΣ</string>
    <string name="rethimnis">ΡΕΘΥΜΝΗΣ</string>
    <string name="rodopis">ΡΟΔΟΠΗΣ</string>
    <string name="samou">ΣΑΜΟΥ</string>
    <string name="serron">ΣΕΡΡΩΝ</string>
    <string name="trikalon">ΤΡΙΚΑΛΩΝ</string>
    <string name="fthiotidas">ΦΘΙΩΤΙΔΑΣ</string>
    <string name="florinas">ΦΛΩΡΙΝΗΣ</string>
    <string name="fokidas">ΦΩΚΙΔΟΣ</string>
    <string name="xalkidikis">ΧΑΛΚΙΔΙΚΗΣ</string>
    <string name="xanion">ΧΑΝΙΩΝ</string>
    <string name="xiou">ΧΙΟΥ</string>
    <string name="imgdesc" translatable="false">περιγραφή φωτογραφίας</string>
    <string name="emailP" translatable="false">Email για\nτεχνικά θέματα</string>
    <string name="emailParl" translatable="false"><b>Στείλε Email και\nπαρατηρήσεις στη Βουλή</b></string>
    <string name="vathm" translatable="false">Βαθμολόγησε\nτην εφαρμογή</string>
    <string name="adeies" translatable="false">Άδειες χρήσης</string>
    <string name="sxetikaKeim" translatable="false"><![CDATA[
<h2>&nbsp&nbsp&nbsp&nbsp***Σχετικά***</h2>
<h6>«Πολυμεσική εφαρμογή για το Ελληνικό Κοινοβούλιο σε κινητές συσκευές»</h6>
<h6>© ΕΑΠ, 2015</h6>
<p>Η παρούσα διατριβή, η οποία εκπονήθηκε στα πλαίσια της ΘΕ ΠΛΗ40, και τα λοιπά αποτελέσματα της αντίστοιχης Διπλωματικής Εργασίας (ΔΕ) αποτελούν συνιδιοκτησία του ΕΑΠ και του φοιτητή, ο καθένας από τους οποίους έχει το δικαίωμα ανεξάρτητης χρήσης και αναπαραγωγής τους (στο σύνολο ή τμηματικά) για διδακτικούς και ερευνητικούς σκοπούς, σε κάθε περίπτωση αναφέροντας τον τίτλο και το συγγραφέα και το ΕΑΠ όπου εκπονήθηκε η ΔΕ καθώς και τον επιβλέποντα και την επιτροπή κρίσης.</p>
<h6>Αναγνώστου Κωνσταντίνος, Φοιτητής</h6>
<h6>Επιβλέπων Α’, Στυλιαράς Γεώργιος, Επίκουρος Καθηγητής, Τμήμα Διαχείρισης Πολιτισμικού Περιβάλλοντος και Νέων Τεχνολογιών Πανεπιστήμιο Πατρών</h6>
<h6>Επιβλέπων Β’, Μοδέστος Σταυράκης, Ερευνητής / Λέκτορας, Τμήμα Μηχανικών Σχεδίασης Προϊόντων και Συστημάτων Πανεπιστήμιο Αιγαίου</h6>
        <p>Η ποικιλία των τηλεφώνων με λειτουργικό Android και η διασπορά των εκδόσεων του συγκεκριμένου λειτουργικού μπορεί να επιφέρει αλλαγές στο περιβάλλον της εφαρμογής.
        Για οποιοδήποτε πρόβλημα, παρακαλώ, στείλε μου μήνυμα.<br />
        Οι πληροφορίες που αναφέρονται στην εφαρμογή προέρχονται από ιστοσελίδες της Βουλής των Ελλήνων.<br />Οι πληροφορίες που αναφέρονται στα βιογραφικά των Βουλευτών έχουν αντληθεί από το επίσημο portal της Βουλής,
        αλλά θα ενημερώνονται κατά τακτικά χρονικά διαστήματα με προσωπική εργασία, που θα περιλαμβάνει άντληση των πληροφοριών από την επίσημη πηγή τους και παροχή τους εκ νέου.</p>
    <h2>&nbsp&nbsp&nbsp&nbsp***Βιβλιοθήκες & Άδειες χρήσης***</h2>
<h6>*YouTube Android Player API</h6>
<p>Except as otherwise noted, the content of this page is licensed under the <a href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 License</a>, and code samples are licensed under the <a href="http://www.apache.org/licenses/LICENSE-2.0">Apache 2.0 License</a>. For details, see our <a href="https://developers.google.com/site-policies">Site Policies</a>.</p>
<h6>*Glide</h6>
        <p>BSD, part MIT and Apache 2.0. See the <a href="https://github.com/bumptech/glide/blob/master/LICENSE">LICENSE</a> file for details.</p><br />
<h6>*Exomedia</h6>
<p>Copyright 2016 Brian Wernick

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

   http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
</p>
<h6>*Google Maps API</h6>
<p>Except as otherwise noted, the content of this page is licensed under the <a href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 License</a>, and code samples are licensed under the <a href="http://www.apache.org/licenses/LICENSE-2.0">Apache 2.0 License</a>. For details, see our <a href="https://developers.google.com/site-policies">Site Policies</a>.</p>
<h6>*Analytics API</h6>
<p>Except as otherwise noted, the content of this page is licensed under the <a href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 License</a>, and code samples are licensed under the <a href="http://www.apache.org/licenses/LICENSE-2.0">Apache 2.0 License</a>. For details, see our <a href="https://developers.google.com/site-policies">Site Policies</a>.</p>
<h6>*jsoup</h6>
<p>The MIT License

© 2009-2016, Jonathan Hedley <jonathan@hedley.net>

Permission is hereby granted, free of charge, to any person obtaining a copy
of this software and associated documentation files (the "Software"), to deal
in the Software without restriction, including without limitation the rights
to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
copies of the Software, and to permit persons to whom the Software is
furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in
all copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
THE SOFTWARE.</p>
<h6>*Twitter (Fabric)</h6>
<p><a href="https://www.fabric.io/terms">Fabric Software and Services Agreement</a></p>
<h6>*okhttp3</h6>
<p>Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

   http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
</p>
<h6>*Parse</h6>
<p><a href="https://github.com/ParsePlatform/parse-server/blob/master/LICENSE">Parse server LICENSE</a></p>
<h6>*Heroku</h6>
<p><a href="https://www.heroku.com/policy/privacy">Heroku Privacy Statement</a></p>
<h6>*CleverTap Notifications</h6>
<p>© 2013 onwards. All Rights Reserved. CleverTap is brought to you by WizRocket, Inc. <a href="http://clevertap.com/privacy-policy">Privacy Policy</a> and <a href="http://clevertap.com/terms-service">Terms of Service</a></p>
]]>
    </string>
    <string name="devel" translatable="false">Google Play</string>
    <string name="klisi" translatable="false"><b>Κλήση</b></string>
    <string name="klisi_java" translatable="false">Καλείται τη Βουλή</string>
    <string name="failed" translatable="false">Η κλήση απέτυχε</string>
    <string name="main_me" translatable="false">Σου στέλνω αυτό το μήνυμα μέσω του προγράμματος της Βουλής των Ελλήνων και θέλω…</string>
    <string name="apostoli" translatable="false">Αποστολή email</string>
    <string name="epikoinonia_mail" translatable="false">Σχόλια ή παρατηρήσεις</string>
    <string name="thesmos">O Θεσμός</string>
    <string name="organosi">Οργάνωση</string>
    <string name="komma">Κόμματα</string>
    <string name="mps">Βουλευτές</string>
    <string name="links">Σύνδεσμοι</string>
    <string name="polimesa">Πολυμέσα</string>
    <string name="ekdoseis">Εκδόσεις</string>
    <string name="photos">Φωτογραφίες</string>
    <string name="tv">Τηλεόραση</string>
    <string name="nav_live_ena">WebTv1</string>
    <string name="nav_live_dio">WebTv2</string>
    <string name="enimerosi">Ενημέρωση</string>
    <string name="deltia">Δελτία τύπου</string>
    <string name="koin_epitropes">Κοινοβουλευτικές Επιτροπές</string>
    <string name="entos">Email χρηστών</string>
    <string name="peri">Περί</string>
    <string name="ns">Νομοσχέδια</string>
    <string name="katatethenta">Κατατεθέντα</string>
    <string name="psifisthenta">Ψηφισθέντα</string>
    <string name="eleghos">Κοινοβουλευτικός Έλεγχος</string>
    <string name="praktika_olom">Επίσημα Πρακτικά Ολομέλειας</string>
    <string name="sinedriaseis_epitropon">Συνεδριάσεις</string>
    <string name="ektheseis">Εκθέσεις</string>
    <string name="drastiriotites">Δραστηριότητες</string>
    <string name="title_activity_maps">Χάρτης</string>
    <string name="menu_share">Κοινοποίηση</string>
    <string name="twitter">Twitter</string>
    <string name="perif_label">Περιφέρεια: </string>
    <string name="search">Αναζήτηση</string>
    <string name="clear">Εκκαθάριση</string>
</resources>