<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/app_name">
        <menu>
            <item
                android:id="@+id/nav_vouli"
                android:icon="@drawable/ic_account_balance_black_24dp"
                android:title="@string/thesmos" />
            <item
                android:id="@+id/nav_organosi"
                android:icon="@drawable/ic_group_work_black_24dp"
                android:title="@string/organosi" />
            <item
                android:id="@+id/nav_vouleutes"
                android:icon="@drawable/ic_account_circle_black_24dp"
                android:title="@string/mps" />
            <item
                android:id="@+id/nav_sindesmoi"
                android:icon="@drawable/ic_insert_link_black_24dp"
                android:title="@string/links" />
        </menu>
    </item>
    <item android:title="@string/polimesa">
        <menu>
            <item
                android:id="@+id/nav_ekdoseis"
                android:icon="@drawable/ic_import_contacts_black_24dp"
                android:title="@string/ekdoseis" />
            <item
                android:id="@+id/nav_photo"
                android:icon="@drawable/ic_filter_black_24dp"
                android:title="@string/photos" />
            <item
                android:id="@+id/nav_kanali"
                android:icon="@drawable/ic_ondemand_video_black_24dp"
                android:title="@string/tv" />
            <item
                android:id="@+id/nav_live_ena"
                android:icon="@drawable/ic_live_tv_black_24dp"
                android:title="@string/nav_live_ena" />
            <item
                android:id="@+id/nav_live_dio"
                android:icon="@drawable/ic_live_tv_black_24dp"
                android:title="@string/nav_live_dio" />
        </menu>
    </item>
    <item android:title="@string/enimerosi">
        <menu>
            <item
                android:id="@+id/nav_nea"
                android:icon="@mipmap/ic_rss_feed_black_24dp"
                android:title="@string/deltia" />
            <item
                android:id="@+id/nav_praktika"
                android:icon="@drawable/ic_library_books_24dp"
                android:title="@string/praktika_olom" />
            <item
                android:id="@+id/nav_eleghos"
                android:icon="@drawable/ic_library_books_24dp"
                android:title="@string/eleghos" />
        </menu>
    </item>
    <item android:title="@string/ns">
        <menu>
            <item
                android:id="@+id/nav_katatethenta"
                android:icon="@drawable/ic_library_books_24dp"
                android:title="@string/katatethenta" />
            <item
                android:id="@+id/nav_psifisthenta"
                android:icon="@drawable/ic_library_books_24dp"
                android:title="@string/psifisthenta" />
        </menu>
    </item>
    <item android:title="@string/koin_epitropes">
        <menu>
            <item
                android:id="@+id/nav_sinedriaseis_epitropon"
                android:icon="@drawable/ic_library_books_24dp"
                android:title="@string/sinedriaseis_epitropon" />
            <item
                android:id="@+id/nav_ektheseis"
                android:icon="@drawable/ic_library_books_24dp"
                android:title="@string/ektheseis" />
            <item
                android:id="@+id/nav_drastiriotites"
                android:icon="@drawable/ic_library_books_24dp"
                android:title="@string/drastiriotites" />

        </menu>
    </item>
    <item android:title="@string/xristes">
        <menu>
            <item
                android:id="@+id/nav_diktio"
                android:icon="@drawable/ic_share_24dp"
                android:title="@string/entos" />
            <item
                android:id="@+id/nav_twitter"
                android:icon="@drawable/twitter_48"
                android:title="@string/twitter" />
            <item
                android:id="@+id/nav_peri"
                android:icon="@drawable/ic_info_outline_black_24dp"
                android:title="@string/peri" />
        </menu>
    </item>
</menu>