<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_klisi"
        android:icon="@drawable/ic_call_white_24dp"
        android:title="@string/klisi"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_mail"
        android:icon="@drawable/ic_mail_outline_white_24dp"
        android:title="@string/epikoinonia_mail"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_map"
        android:icon="@drawable/ic_map_24dp"
        android:title="@string/title_activity_maps"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_share"
        android:icon="@drawable/ic_share_24dp"
        android:title="@string/menu_share"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_peri"
        android:icon="@drawable/ic_info_outline_white_24dp"
        android:title="@string/peri"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/nav_diktio"
        android:icon="@drawable/ic_share_24dp"
        android:title="@string/entos"
        app:showAsAction="never" />

</menu>
