<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/perifereiaButton"
        style="@style/SearchButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_margin"
        android:padding="@dimen/text"
        android:text="@string/perif_label" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/shadow" />

    <Button
        android:id="@+id/kommaButton"
        style="@style/SearchButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_margin"
        android:padding="@dimen/text"
        android:text="@string/kommatxt" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/shadow" />

    <Button
        android:id="@+id/searchButton"
        style="@style/SearchButtonStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left|center_vertical"
        android:layout_margin="@dimen/card_margin"
        android:gravity="end"
        android:padding="@dimen/text"
        android:text="@string/search"
        android:textAlignment="textEnd" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/shadow" />

    <Button
        android:id="@+id/clearButton"
        style="@style/SearchButtonStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_margin"
        android:gravity="end"
        android:padding="@dimen/text"
        android:text="@string/clear"
        android:textAlignment="textEnd" />

    <View
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:background="@drawable/shadow" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/mpsList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:padding="5dp"
        android:scrollbars="vertical"
        tools:listitem="@layout/item_mps" />

</LinearLayout>