<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="gr.mobap.PeriActivity">

    <com.google.android.material.appbar.AppBarLayout
        style="@style/AppTheme.AppBarOverlay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/action_bar"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:theme="@style/AppTheme.PopupOverlay"
            app:logo="@mipmap/ic_launcher" />

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".PeriActivity">

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@drawable/shadow" />

        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">


            <Button
                android:id="@+id/btnVathm"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="left|center_vertical"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:drawableTop="@drawable/favorite"
                android:gravity="center"
                android:text="@string/vathm"
                android:textColor="@color/colorWhite" />

            <Button
                android:id="@+id/btnMail"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="right|center_vertical"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:drawableTop="@drawable/mail"
                android:gravity="center"
                android:text="@string/emailP"
                android:textColor="@color/colorWhite" />

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/linear"
            android:layout_centerVertical="true"
            android:layout_margin="10dp"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:scrollbarStyle="insideOverlay"
            android:scrollbars="vertical">

            <TextView
                android:id="@+id/sxetikaKeim2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"
                android:drawableBottom="@drawable/ic_splash"
                android:drawableTop="@drawable/ic_eap"
                android:linksClickable="true"
                android:text="@string/sxetikaKeim" />

        </ScrollView>

    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>